2006-03-23  Edward Hervey  <edward@fluendo.com>

	* pitivi/configure.py.in:
	* pitivi/discoverer.py:
	* pitivi/objectfactory.py:
	* pitivi/playground.py:
	* pitivi/settings.py:
	* pitivi/sourcelist.py:
	* pitivi/ui/viewer.py:
	More API documentation

2006-03-23  Edward Hervey  <edward@fluendo.com>

	* pitivi/configure.py.in:
	Added get_global_pixmap_dir() for being able to use local/global installed
	pixmap directory.
	* pitivi/ui/mainwindow.py:
	Fix window icon behaviour for cvs and installed
	* pitivi/ui/projectsettings.py:
	icon not needed here

2006-03-23  Edward Hervey  <edward@fluendo.com>

	* pitivi/discoverer.py:
	* pitivi/effects.py:
	* pitivi/objectfactory.py:
	* pitivi/pitivi.py:
	* pitivi/playground.py:
	* pitivi/project.py:
	* pitivi/timeline.py:
	* pitivi/ui/complexlayer.py:
	* pitivi/ui/complexsource.py:
	* pitivi/ui/complextimeline.py:
	* pitivi/ui/exportsettingswidget.py:
	* pitivi/ui/gstwidget.py:
	* pitivi/ui/mainwindow.py:
	* pitivi/ui/projectsettings.py:
	* pitivi/ui/ruler.py:
	* pitivi/ui/sourcefactories.py:
	* pitivi/ui/timelineobjects.py:
	Cleanup and fixes thanks to pychecker.
	Moved Christian's patch for appicon into each of the windows and dialog
	boxes classes.

2006-03-23  Christian Schaller  <christian@fluendo.com>

	* pitivi/pitivi.py: Add appicon to window decoration

2006-03-23  Edward Hervey  <edward@fluendo.com>

	* pitivi/ui/Makefile.am:
	* pitivi/ui/discoverererrordialog.glade:
	Adding glade file for the DiscovererErrorDialog.

2006-03-23  Edward Hervey  <edward@fluendo.com>

	* pitivi/ui/viewer.py:
	Don't display bogus value when the duration is not valid.
	Only activate controls/slider when not on default view(videotestsrc).
	Update for new dnd module naming.
	New scrubbing system. Don't seek like a mad man, but at most every 80ms
	Only activate the record button for timelines that have content.
	

2006-03-23  Edward Hervey  <edward@fluendo.com>

	* pitivi/dnd.py:
	replace dnd.DND_* with dnd.*
	* pitivi/effects.py: